# tdcraft-godot

./: .gitignore  LICENSE  README.md
agents/human/: icon.svg.import  project.godot
agents/human/addons/godot-vim/: icon.svg.import
agents/human/assets/Sprites/: 2d_animation_frog_spritesheet.png.import  2d_animation_player-fox-run.webp.import
agents/human/assets/Sprites/2d_sprite_animation_assets/2d_sprite_animation_assets/run_animation/: run-1.png.import  run-2.png.import  run-3.png.import  run-4.png.import  run-5.png.import  run-6.png.import  run-7.png.import  run-8.png.import
agents/human/licenses/: README.md  main.tscn
agents/human/scenes/: fox_node.tscn  frog_node.tscn  main.tscn  player_node.tscn  world.tscn
agents/human/scripts/: main.gd  player.gd
agents/rsrl-agent/: Cargo.toml
agents/rust-rl-agent/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
shared/: global_clients_info.proto
shared/protobuf/: keepalive.proto  register.proto
