[package]
name = "rsrl-agent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }

# We're using tonic as the gRPC method
tonic = "0.5"
prost = "0.9"
tokio = { version = "1", features = ["full"] }
